[tool.poetry]
name = "na"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
psutil = "5.9.3"
pandas = "^2.2.2"
tqdm = "^4.66.4"
numba = "^0.59.1"
numpy = "^1.26.4"
joblib = "^1.4.2"
jinja2 = "^3.1.4"
jsonpath-ng = "^1.6.1"


[tool.poetry.group.dev.dependencies]
ipykernel = "^6.29.4"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
